--- a/src/App.css
+++ b/src/App.css
@@ -7,31 +7,64 @@
 
 /*------------------------------------------ */
 
-.maindiv {
-  height: 100vh;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px;
-}
-
 .heading {
-  font-weight: 100;
-  font-size: 2.5em;
-  padding: 0px 20px;
-  color: maroon;
-  border-bottom: 1px solid gray;
+  line-height: 0.1em;
+  padding: 0px 50px 0px;
+  z-index: 2;
 }
 
+.heading span {
+  padding: 0 5px;
+  background: gainsboro;
+  color: maroon;
+  font-family: Comfortaa;
+}
+
+.wheel {
+  display: flex;
+  width: 250px;
+  height: 250px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  border-radius: 50%;
+  animation: spin 10s linear infinite;
+  position: absolute;
+  left: 40%;
+  top: 25%;
+  justify-content: center;
+  align-items: center;
+}
+
+.wheel h1 {
+  font-size: 200px;
+  color: rgba(20, 20, 20, 0.315);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 /* -HEADER----------------------------------- */
+.header {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 5px;
+  background: whitesmoke;
+  z-index: 1;
+  position: relative;
+  animation: topmove 1s ease-in-out;
+}
 
 .left {
   display: flex;
-  background: black;
+  background: linear-gradient(120deg, #141414 79.1%, whitesmoke 80.1%);
   align-items: center;
   width: 100%;
   height: 100px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 10px;
-  position: relative;
-  animation: topmove 1s ease-in-out;
+  transition: 1s;
 }
 
 .left img {
@@ -56,38 +89,45 @@
 .right {
   display: flex;
   flex-direction: row;
-  background: #00000021;
+  width: 621px;
+  justify-content: space-between;
   align-items: center;
+  padding: 20px 35px;
+  background: linear-gradient(90deg, rgba(20, 20, 20, 0.948) 14.5%, rgba(0, 0, 0, 0.129) 14.5%);
+  box-shadow: rgba(0, 0, 0, 0.3) 10px 10px 30px;
   transform: rotate(90deg);
   position: absolute;
-  top: 330px;
-  right: -340px;
+  top: 312px;
+  right: -312px;
   z-index: 999;
+  transition: 1s;
   animation: leftmove 1s ease-in-out;
 }
 
 @keyframes leftmove {
   from {
-    right: -410px;
+    right: -380px;
   }
 
   to {
-    right: -340px;
+    right: -312px;
   }
 }
 
-.right li {
-  text-decoration: none;
-  list-style: none;
-  padding: 20px 44px;
+.right a {
   cursor: pointer;
-  font-weight: 700;
+  font-weight: bold;
+  background: transparent;
 }
 
-.right li:hover {
-  color: maroon;
+.right nav:hover {
   transform: scale(1.5);
-  transition: 1s;
+  transition: all 1s;
+}
+
+.right span:hover {
+  color: maroon;
+  transition: all 1s;
 }
 
 /* -Banner------------------------------------- */
@@ -96,14 +136,17 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 630px;
+  height: 583px;
+  overflow: hidden;
   align-items: center;
   justify-content: space-between;
   position: relative;
-  background: white;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px;
+  background: linear-gradient(120deg, rgb(20, 20, 20) 64%, rgb(245, 245, 245) 65%);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 5px;
+  border-bottom: 10px solid rgba(20, 20, 20, 0.736);
   animation-name: fade;
   animation-duration: 1.5s;
+  transition: 1s;
 }
 
 .bio {
@@ -114,7 +157,7 @@
 }
 
 .bio img {
-  width: 650px;
+  width: 600px;
   object-fit: contain;
   float: right;
 }
@@ -124,15 +167,15 @@
   flex-direction: column;
   position: absolute;
   right: 45%;
-  top: 40%;
+  top: 200px;
 }
 
 .bio1 h1 {
   border-bottom: 1px solid grey;
-  color: black;
-  font-size: 3.5em;
+  color: maroon;
+  font-size: 3em;
   line-height: 1em;
-  font-family: Rajdhani;
+  font-family: Comfortaa;
   white-space: nowrap;
 }
 
@@ -161,48 +204,56 @@
 
 .about {
   width: 90%;
-  margin: 50px auto;
-  margin-top: 100px;
+  height: 100%;
+  margin: auto;
+  padding: 100px 0px;
 }
 
 .ab1 {
-  background: whitesmoke;
+  display: flex;
+  flex-direction: column;
   padding: 30px 30px;
+  position: relative;
 }
 
 .ab1 p {
   color: black;
+  padding: 50px 20px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  z-index: 1;
 }
 
 /* -SKILLS--------------------------------- */
 
-.skmain {
+.skills {
   width: 90%;
-  margin: 100px auto;
+  height: 100%;
+  margin: auto;
+  padding: 100px 0px;
 }
 
-.skills {
-  /* display: grid; */
-  /* grid-template-columns: auto auto auto auto auto auto; */
-  /* grid-template-rows: 200px 200px; */
+.skmain {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 30px;
+  position: relative;
+}
+
+.skmap {
   display: flex;
   flex-wrap: wrap;
-  background: whitesmoke;
-
+  padding: 30px 0px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  z-index: 1;
 }
 
 .sk1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
-  background: whitesmoke;
-  padding: 30px 63px;
-}
-
-.sk1:hover img {
-  transform: scale(1.2);
-  transition: 1s;
+  padding: 30px 80px;
+  margin: auto;
+  position: relative;
 }
 
 .sk1 img {
@@ -210,148 +261,27 @@
   height: 100px;
 }
 
-/* -CONTACT--------------------------------------- */
-
-.contact {
-  margin: 80px;
-}
-
-.con1 {
-  display: flex;
-  flex-direction: row;
-  padding: 0px 20px;
-  /* justify-content: center; */
-  /* margin: 50px auto; */
-}
-
-.con1a {
-  display: flex;
-  flex-direction: column;
-}
-
-.con1a .co {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  margin: 15px 0px;
-  padding-left: 20px;
-  background: white;
-  width: 50px;
-  overflow: hidden;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border: 1px solid grey;
-  /* box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px; */
-}
-
-.co h3 {
-  margin: 0;
-  font-weight: 100;
-  background: #f7f7f7;
-  color: #141414;
-  width: 100%;
-  padding: 15px 10px;
-  border-left: 1px solid grey;
-
-}
-
-.con1a:hover .co {
-  animation: tag 2s forwards;
-}
-
-@keyframes tag {
-  to {
-    width: 350px;
-  }
-}
-
-.con1b {
-  display: flex;
-  flex-direction: column;
-  border-left: 1px solid gray;
-  padding: 15px 0px;
-  padding-left: 100px;
-  gap: 15px;
-}
-
-.con1b div {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.con1b input {
-  width: 100%;
-  background: white;
-  color: black;
-  padding: 10px;
-  border-radius: 10px;
-  border: transparent;
-  border-bottom: 5px solid maroon;
-}
-
-.con1b textarea {
-  width: 45vw;
-  height: 7.5vw;
-  background: white;
-  color: black;
-  padding: 10px;
-  border-radius: 10px;
-  resize: none;
-  /* border: transparent; */
-  border-bottom: 5px solid maroon;
-}
-
-.con1b button {
-  margin-left: 86%;
-  width: 100px;
-  height: 30px;
-  background: white;
-  color: black;
-  font-weight: bold;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.con1b button:hover {
-  background: maroon;
-  color: white;
-}
-
-/* -------------------------------------- */
-
-.contct {
-  display: flex;
-  height: 630px;
-  padding-bottom: 50px;
-  position: relative;
-  /* animation: banmove 1s ease-in-out; */
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.3;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.win {
-  display: flex;
-  flex-direction: column;
-  z-index: 3;
-  justify-content: space-between;
-  height: 37%;
-  width: 34%;
-  background: white;
+.sk1 label {
+  display: none;
   position: absolute;
-  top: 4.4%;
-  left: 32.6%;
+  top: 50%;
+  font-weight: bolder;
+  font-size: large;
+  padding: 5px;
+  border-radius: 10%;
+  color: white;
+  background: #00000095;
+}
+
+.sk1:hover img {
+  transform: scale(1.2);
+  transition: 1s;
+}
+
+.sk1:hover label {
+  display: block;
+  transform: scale(1.2);
+  transition: 1s;
 }
 
 /* -PROJECTS------------------------------ */
@@ -364,8 +294,11 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  margin: 50px auto;
+  margin: auto;
+  padding: 0px 20px;
+  padding-bottom: 20px;
   gap: 30px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 15px;
 }
 
 .projbox {
@@ -378,14 +311,57 @@
 .projinfo {
   display: flex;
   flex-direction: column;
-  flex: 80%;
+  flex: 70%;
+  gap: 20px;
+}
+
+.projbtn {
+  display: flex;
+  gap: 5px;
+}
+
+.projbtn form {
+  display: block;
+}
+
+.projbtn button {
+  width: 100%;
+  display: flex;
+  padding: 0px;
+  align-items: center;
+  height: auto;
+  background: whitesmoke;
+  color: black;
+  border-radius: 50px;
+  border: 1px solid transparent;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.projbtn button img {
+  width: 40px;
+}
+
+.projbtn button span {
+  width: 0;
+  font-size: smaller;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.projbtn button:hover span {
+  width: 100px;
+  transition: 1s;
 }
 
 .projimg {
   display: flex;
   flex-direction: column;
-  flex: 20%;
+  flex: 30%;
   gap: 5px;
+  align-items: center;
 }
 
 .projimg img {
@@ -395,68 +371,190 @@
   cursor: pointer;
 }
 
-.projbtn {
+/* -CONTACT--------------------------------------- */
+
+.contact {
+  display: block;
+  font-family: Comfortaa;
+}
+
+.cont1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 40px;
+}
+
+.con1a {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  flex: 30;
+  padding: 0px 20px;
+  gap: 20px;
+  border-left: 1px solid grey;
+  border-right: 1px solid grey;
 }
 
-.projbtn form {
-  display: block;
+.con1a h1 {
+  color: maroon;
+}
+
+.con1a h3 {
+  font-weight: 400;
+  margin: 0;
+}
+
+.con1a img {
+  width: 50px;
+  height: 50px;
+  padding: 0px 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: 1s;
+}
+
+.con1a img:hover {
+  transform: scale(1.2);
+}
+
+/* -------------------- */
+.con1b {
+  display: flex;
+  flex-direction: column;
+  flex: 30;
+  padding: 0px 20px;
+  gap: 20px;
+}
+
+.con1b h2 {
+  margin: 0;
+  font-weight: 400;
+}
+
+.con1b span {
+  display: flex;
+  font-weight: bold;
+  font-size: small;
+  color: black;
+}
+
+/* -------------------- */
+.con1c {
+  display: flex;
+  flex-direction: column;
+  flex: 30;
+  border-left: 1px solid grey;
+  border-right: 1px solid grey;
+  padding: 0px 20px;
+}
+
+.con1c h2 {
+  margin: 0;
+  font-weight: 400;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
   width: 100%;
+  gap: 10px;
+  padding: 20px 0px;
 }
 
-.projbtn button {
+.form div {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 80%;
+}
+
+.con1c input {
+  width: 100%;
+  background: transparent;
+  color: black;
+  padding: 10px;
+  border: transparent;
+  border-bottom: 5px solid grey;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.con1c textarea {
+  width: 100%;
+  height: 182px;
+  background: transparent;
+  color: black;
+  padding: 10px;
+  resize: none;
+  border: transparent;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  border-bottom: 5px solid grey;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
+
+.con1c button {
   width: 100%;
   height: 30px;
-  background: whitesmoke;
-  color: black;
-  border-radius: 20px;
+  background: gainsboro;
+  color: grey;
+  font-weight: bold;
   cursor: pointer;
   transition: 0.5s;
-  font-size: 1.2vw;
+  border: transparent;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 5px;
+  border-bottom: 5px solid grey;
+  border-radius: 10px;
 }
 
-.projbtn button:hover {
-  background: maroon;
+.con1c button:hover {
+  background: black;
   color: white;
 }
 
 /* -FOOTER----------------------------------------- */
 
+.slider {
+  background: linear-gradient(120deg, gainsboro 53%, whitesmoke 54%);
+  /* background: gainsboro; */
+  position: absolute;
+  width: 100%;
+  top: 52.4%;
+  transition: all 0.5s;
+  z-index: 999;
+}
+
+.close {
+  background: gainsboro;
+  width: 100%;
+  top: 94%;
+  transition: all 0.5s;
+  z-index: 999;
+}
+
 .footer {
+  /* background: gainsboro; */
   position: relative;
   width: 100%;
-  height: 40px;
-  background: whitesmoke;
+  height: 100%;
   border-top: 5px solid gray;
+  z-index: 999;
 }
 
 .foot1 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   color: gray;
-  width: 80%;
-  margin: auto ;
-  padding: 10px;
+  font-size: large;
+  width: 95%;
+  height: fit-content;
+  margin: auto;
 }
 
-.foot1 .foot1b {
+.foot1a {
   display: flex;
-  flex-direction: row;
-}
-
-.foot1b li {
-  color: gray;
-  text-decoration: none;
-  list-style: none;
-  padding: 0px 20px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.foot1b li:hover {
-  color: white;
+  padding: 10px 0px;
 }
 
 .footer .scroll {
@@ -464,28 +562,28 @@
   width: 100px;
   border-top-right-radius: 50px;
   border-top-left-radius: 50px;
-  background: whitesmoke;
+  background: gainsboro;
   color: gray;
   position: absolute;
   top: -45px;
   left: 45%;
   cursor: pointer;
-  transition: top 0.1s ease-in-out;
+  transition: top 0.5s ease-in-out;
   border-top: 5px solid gray;
 }
 
 .scroll:hover {
-  top: -48px;
-  color: white;
-}
-
-.scroll h1 {
-  transform: rotate(90deg);
+  top: -52px;
+  color: maroon;
 }
 
 /* ---------------------------------------- */
 
 @media screen and (max-width: 700px) {
+
+  .left {
+    background: #141414;
+  }
 
   .bio {
     display: flex;
@@ -497,6 +595,10 @@
 
   .bio img {
     width: 400px;
+  }
+
+  .bio1 h1 {
+    font-size: 2em;
   }
 
   .bio1 {
@@ -512,7 +614,14 @@
     flex-direction: column;
   }
 
-  .projbtn button {
-    font-size: 1em;
+  .cont1 {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .con1a,
+  .con1b,
+  .con1c {
+    border: 1px solid grey;
   }
 }
