--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Play:wght@400;700&family=Rajdhani:wght@300;400;500;600;700&family=Advent+Pro:wght@100;200&family=Pompiere&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Advent+Pro:wght@500;600;700;800;900&family=Comfortaa:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Play:wght@400;700&family=Rajdhani:wght@300;400;500;600;700&display=swap'); */
 
 :root {
-  font-family: 'Play', sans-serif;;
-  /* Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Advent Pro', sans-serif;
+  font-size: large;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 500;
 
   color-scheme: light dark;
   color: black;
-  /* background-image: url('/src/images/banr.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; */
-  /* #242424 */
-  /* rgba(255, 255, 255, 0.87) */
   background: white;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,18 +20,16 @@
 body {
   margin: 0;
   overflow-x: hidden;
-  /* display: flex; */
-  /* place-items: center; */
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
+  overflow-y: none;
 }
 
-h1 {
-  /* font-size: 3.2em;
-  line-height: 1.1; */
+h1,p {
   margin: 0;
 }
 
-p {
-  margin: 0;
+button{
+  font-family: Comfortaa
+}
+input, textarea{
+  font-family: 'Advent Pro', sans-serif;
 }
